--- a/build.gradle
+++ b/build.gradle
@@ -56,6 +56,16 @@ publishing {
             from components.java
         }
     }
+    repositories {
+        maven {
+            name = "GitHubPackages"
+            url = uri("https://maven.pkg.github.com/WorldBucketList/common-lib")
+            credentials {
+                username = project.findProperty("gpr.user") ?: System.getenv("USERNAME")
+                password = project.findProperty("gpr.token") ?: System.getenv("TOKEN")
+            }
+        }
+    }
 }
 
 tasks.named('test') {
